# High-Performance-BVH-Builder-In-CUDA

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.run/: main_aplusb.run.xml  main_linear_bvh.run.xml  run_experiments.run.xml
data/buddha/: camera.txt
data/dragon/: camera.txt
data/gnome/: camera.txt  gnome.ply
data/hairball/: camera.txt
data/powerplant/: camera.txt  link.txt
data/rungholt/: camera.txt
data/san-miguel/: camera.txt  link.txt
data/sponza/: camera.txt
docs/slang_impl/: hploc.slang  hploc.slangh
libs/: CMakeLists.txt
libs/base/: CMakeLists.txt
libs/base/libbase/: stats.h
libs/clew/: CMakeLists.txt
libs/images/: CMakeLists.txt
libs/images/libimages/: debug_io.cpp
libs/kitten_lbvh/: CMakeLists.txt
libs/kitten_lbvh/KittenEngine/includes/modules/: Bound.h
libs/kitten_lbvh/KittenGpuLBVH/: lbvh.cu  lbvh.cuh
src/: hploc_topology_tests.cpp  hploc_topology_tests.cu  main.cpp  main_aplusb.cpp  main_linear_bvh.cpp
src/cpu_helpers/: build_bvh_cpu.h  morton_code_cpu.h
src/debug/: debug_bvh.h  debug_geometry.h
src/experiments/: benchmark.h  common.h  cpu_lbvh.cpp  cpu_lbvh.h  gpu_brute_force.cpp  gpu_brute_force.h  gpu_lbvh.cpp  gpu_lbvh.h  hploc.cpp  hploc.cu  hploc_bvh2.cu  hploc_bvh2.h  hploc_bvh8.cpp  hploc_bvh8.cu  hploc_bvh8.h  hploc_bvh8_compressed.cu  hploc_bvh8_compressed.h  hploc_wide.cpp  hploc_wide.cu  hploc_wide.h  hploc_wide4.cpp  hploc_wide4.h  hploc_wide8.cpp  hploc_wide8.h  kitten_lbvh.cpp  kitten_lbvh.h  lbvh.cpp  lbvh.cu  lbvh.h  lbvh_cpu.h  my_cpu_lbvh.cpp  my_cpu_lbvh.h  my_gpu_lbvh.cpp  my_gpu_lbvh.h  nexus_bvh.cu  nexus_bvh.h  nexus_bvh2.cu  nexus_bvh2.h  nexus_bvh8.cu  nexus_bvh8.h  (+4 more)
src/io/: camera_reader.cpp  camera_reader.h  scene_reader.cpp  scene_reader.h
src/kernels/: defines.h  kernels.cpp  kernels.h
src/kernels/bvh_common/: compute_mortons.cu  fill_indices.cu
src/kernels/cl/: camera_helpers.cl  geometry_helpers.cl  random_helpers.cl  ray_tracing_render_brute_force.cl  ray_tracing_render_using_lbvh.cl
src/kernels/cu/: aplusb.cu  camera_helpers.cu  compute_mortons.cu  fill.cu  geometry_helpers.cu  random_helpers.cu  ray_tracing_render_brute_force.cu  ray_tracing_render_using_bvh.cu  ray_tracing_render_using_lbvh.cu  sort_by_key.cu
src/kernels/cu/helpers/: rassert.cu
src/kernels/h_ploc/: hploc.cu  hploc.h  hploc_wide.cu  hploc_wide.h  wide_bvh_converter.cu  wide_bvh_converter.h
src/kernels/helpers/: compute_morton_codes.cu  compute_motron_codes.cu  compute_scene_aabb.cu  fill.cu  fill_indices.cu  geometry_helpers.cu  helpers.cuh  random_helpers.cu  rassert.cu  sort_by_key.cu  sort_pairs.cu
src/kernels/hploc/: hploc.cu  hploc.cuh  hploc_bvh2.cu  hploc_bvh2.cuh  hploc_bvh8.cu  hploc_bvh8.cuh  hploc_bvh8_compressed.cu  hploc_bvh8_compressed.cuh  hploc_wide.cu  hploc_wide.cuh
src/kernels/kitten_utils/: compute_faces_aabb.cu  convert_to_bvh_nodes.cu
src/kernels/lbvh/: build_aabb.cu  build_aabb_leaves.cu  build_lbvh.cu  lbvh.cu  lbvh.cuh  lbvh.h
src/kernels/my_lbvh/: my_lbvh.cu  my_lbvh.h
src/kernels/nexus_bvh/: nexus_bvh.cu  nexus_bvh.cuh  nexus_bvh2.cuh  nexus_bvh8.cuh  nexus_bvh_wide.cu  nexus_bvh_wide.cuh
src/kernels/nexus_hploc/: nexus_hploc.cu  nexus_hploc.h
src/kernels/ray_tracing/: ray_tracing_render_brute_force.cu  ray_tracing_render_using_bvh.cu  rt.cuh  rt_bvh2.cu  rt_bvh2.cuh  rt_bvh8.cu  rt_bvh8.cuh  rt_compressed_bvh8.cu  rt_compressed_bvh8.cuh  rt_hploc.cu  rt_hploc.h  rt_hploc_bvh8.cu  rt_hploc_wide.cu  rt_hploc_wide.cuh  rt_lbvh.cu  rt_nexus_bvh_wide.cu
src/kernels/shared_structs/: aabb_gpu_shared.h  bvh_node_gpu_shared.h  camera_gpu_shared.h  morton_code_gpu_shared.h  struct_helpers.h
src/kernels/structs/: aabb.h  bvh_node.h  bvh_node_gpu.h  camera.h  camera_gpu.h  framebuffers.h  morton_code.h  morton_code_gpu.h  scene.h  wide_bvh_node.h
src/kernels/utils/: camera_helpers.cu  fill.cu  geometry_helpers.cu  sort_by_key.cu
src/kernels/vk/: camera_helpers.vk  geometry_helpers.vk  random_helpers.vk  ray_tracing_render_brute_force.comp  ray_tracing_render_using_lbvh.comp
src/utils/: cuda_utils.cpp  cuda_utils.h  defines.h  device_buffer.h  device_wrappers.h  exceptions.h  gpu_wrappers.h  sah.h  utils.h  wide_bvh_sah.h
